# Toolbelt

./: .gitignore  pyproject.toml
commands/: init.py
toolbelt/: __main__.py
toolbelt/commands/: dev.py  init.py
toolbelt/templates/: gitignore
toolbelt/templates/python/: pre-commit-config.yaml
toolbelt/utils/: log.py  sh.py
