[project]
name = "toolbelt"
version = "0.1.0"
description = "Unified CLI wrapper for internal tooling"
requires-python = ">=3.9"
dependencies = ["click>=8.1", "rich>=13.0", "ruff", "black", "pytest"]

[project.optional-dependencies]
dev = ["isort"]

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311"]

[project.scripts]
toolbelt = "toolbelt.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["toolbelt*"]

[tool.setuptools.package-data]
# include EVERYTHING under toolbelt/templates (including .gitignore)
"toolbelt" = ["templates/**/*"]
